namespace Bannerlord.UIExtenderEx.Prefabs
{
    /// <summary>
    /// General interface for XML prefab patch
    /// </summary>
    public interface IPrefabPatch
    {
        string Id { get; }
    }
}